--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron ">
 <h1>Welcome to MicroBlog</h1>
 <h2>MicroBlog Homepage</h2>
-<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 <%= link_to image_tag("rails-logo.svg", class: "rails-logo", alt: "Rails logo"),
 'http://rubyonrails.org/' %>
