--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,20 +3,9 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <%= render 'shared/error_messages' %>
+    <%= render 'form', f: f %>
+    <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
