--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <%= form_for(@user) do |f| %>
-    <%= render 'shared/error_messages' %>
-    <%= render 'form', f: f %>
+    <%= render 'shared/error_messages', obj: f.object %>
+    <%= render 'form', f: f%>
     <%= f.submit "Update User", class: "btn btn-primary" %>
     <% end %>
   </div>
