Add mcpost tests and feed and delete functionality

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <div class="row">
+<div class="row">
   <aside class="col-md-4">
     <section class="user_info">
       <%= render 'shared/user_info' %> 
@@ -8,13 +8,17 @@
       <%= render 'shared/micropost_form' %>
     </section>
   </aside>
+  <div class="col-md-8">
+    <h3>Micropost Feed</h3>
+    <%= render 'shared/feed' %>
   </div>
+</div>
 <% else %>
-  <div class="center jumbotron ">
+<div class="center jumbotron ">
   <h1>Welcome to MicroBlog</h1>
   <h2>MicroBlog Homepage</h2>
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-  </div>
-  <%= link_to image_tag("rails-logo.svg", class: "rails-logo", alt: "Rails logo"),
-  'http://rubyonrails.org/' %>
+</div>
+<%= link_to image_tag("rails-logo.svg", class: "rails-logo", alt: "Rails logo"),
+'http://rubyonrails.org/' %>
 <% end %>
